syntax = "proto3";
package task;
option go_package = "github.com/blackhorseya/ekko/pkg/entity/domain/task/model";

import "google/protobuf/timestamp.proto";

enum TicketStatus {
  TICKET_STATUS_UNSPECIFIED = 0;
  TICKET_STATUS_TODO = 1;
  TICKET_STATUS_INPROGRESS = 2;
  TICKET_STATUS_DONE = 3;
}

message Ticket {
  int64 id = 1;
  string title = 2;
  TicketStatus status = 3;
  // @gotags: json:"-"
  google.protobuf.Timestamp created_at = 4;
  // @gotags: json:"-"
  google.protobuf.Timestamp updated_at = 5;
}
